--- a/index.html
+++ b/index.html
@@ -374,6 +374,8 @@
             <li><a href="bai16.html">Bài 16: Định dạng khung</a></li>
             <li><a href="bai17.html">Bài 17: Các mức ưu tiên của bộ chọn</a></li>
             <li><a href="bai18.html">Bài 18: Thực hành tổng hợp thiết kế trang web</a></li>
+            <li><a href="https://www.canva.com/design/DAG-u1xzf1w/PoPHwwzmu0GpB8v59pj8Lg/edit?utm_content=DAG-u1xzf1w&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Bài 19: Dịch vụ sửa chữa và bảo trì máy tính</a></li>
+            <li><a href="https://www.canva.com/design/DAG-vD2GKiM/XkX3qrKf7A3VODfr-6Hlqw/edit?utm_content=DAG-vD2GKiM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Bài 20: Nhóm nghề quản trị trong ngành Công nghệ thông tin</a></li>
         </ul>
     </section>
 
@@ -426,3 +428,4 @@
 
 </body>
 </html>
+
